# rust-iff-parser

./: Cargo.toml  README.md
data/: amiga.ftxt  noise.aiff  scott.ilbm
src/: lib.rs
