[package]
name = "iff-parser"
version = "0.2.0"
authors = ["StealthOfKing <sok@monocyte.host>"]
edition = "2021"
license = "GPL-3.0"
description = "Interchange File Format parser"

[dependencies]
chunk-parser = { git = "https://github.com/StealthOfKing/rust-chunk-parser.git" }

[dev-dependencies]
assert_cmd = "2.0"

[[bin]]
name = "iff-guess"
